CReturn tests and minor fixes